...
    <string name="description_view_account_icon">View account details</string>
    <string name="label_no_accounts">No accounts to display</string>
    <string name="btn_save">Save</string>
    <string name="btn_test">Test</string>
    <string name="label_passcode">Enter Passcode</string>
...
    <string name="title_accounts">Accounts</string>
    <string name="title_transactions">Transactions</string>
    <string name="menu_delete">Delete</string>
    <string name="alert_dialog_ok_delete">Delete</string>
    <string name="title_delete_account">Delete Account</string>
...
    <string name="option_delete_after_export">Delete transactions after export</string>
    <string name="hint_delete_after_export">All exported transactions will be deleted when exporting is completed</string>
    <string name="title_settings">Settings</string>
    <string-array name="export_destinations">
        <item>Save As…</item>
...
    <string name="summary_delete_all_accounts">Delete all accounts in the database. All transactions will be deleted as well.</string>
    <string name="title_delete_all_accounts">Delete all accounts</string>
    <string name="header_account_settings">Accounts</string>
    <string name="toast_all_accounts_deleted">All accounts have been successfully deleted</string>
    <string name="confirm_delete_all_accounts">Are you sure you want to delete all accounts and transactions?\n\nThis operation cannot be undone!</string>
...
    <string name="title_all_accounts">All</string>
    <string name="summary_create_default_accounts">Creates default GnuCash commonly-used account structure</string>
    <string name="title_create_default_accounts">Create default accounts</string>
    <string name="msg_confirm_create_default_accounts_setting">A new book will be opened with the default accounts\n\nYour current accounts and transactions will not be modified!</string>
    <string name="title_scheduled_transactions">Transactions</string>
...
    <string name="label_tap_to_create_schedule">Tap to create schedule</string>
    <string name="title_restore_backup">Restore Backup…</string>
    <string name="header_backup_and_export_settings">Backup &amp; export</string>
    <string name="title_dropbox_sync_preference">Enable Dropbox</string>
    <string name="title_owncloud_sync_preference">Enable ownCloud</string>
...
    <string name="summary_owncloud_sync">Enable exporting to ownCloud</string>
    <string name="title_backup_prefs">Backup Preferences</string>
    <string name="title_create_backup_pref">Create Backup</string>
    <string name="summary_create_backup_pref">Create a backup of the active book</string>
    <string name="summary_restore_backup_pref">Restore most recent backup of active book</string>
    <string name="toast_backup_successful">Backup successful</string>
    <string name="toast_backup_failed">Backup failed</string>
    <string name="export_warning_xml">Exports all accounts and transactions</string>
...
    <string name="label_scheduled_action">"%1$s, last executed on %2$s"</string>
    <string name="label_scheduled_action_ended">"Ended"</string>
    <string name="btn_wizard_next">Next</string>
    <string name="btn_wizard_finish">Done</string>
    <string name="wizard_title_default_currency">Default Currency</string>
    <string name="wizard_title_account_setup">Account Setup</string>
    <string name="wizard_title_select_currency">Select Currency</string>
    <string name="wizard_title_feedback_options">Feedback Options</string>
    <string name="wizard_option_create_default_accounts">Create default accounts</string>
    <string name="wizard_option_import_my_accounts">Import my accounts</string>
    <string name="wizard_option_let_me_handle_it">Let me handle it</string>
    <string name="wizard_option_currency_other">Other…</string>
    <string name="wizard_option_auto_send_crash_reports">Automatically send crash reports</string>
    <string name="wizard_option_disable_crash_reports">Disable crash reports</string>
    <string name="wizard_btn_back">Back</string>
    <string name="title_setup_gnucash">Setup GnuCash</string>
...
    <string name="digit_zero_text">+</string>
    <string name="title_manage_books">Manage Books</string>
    <string name="menu_manage_books">Manage Books…</string>
    <string name="select_chart_to_view_details">Select any part of the chart to view details</string>
    <string name="title_confirm_delete_book">Confirm delete Book</string>
    <string name="msg_all_book_data_will_be_deleted">All accounts and transactions in this book will be deleted!</string>
    <string name="btn_delete_book">Delete Book</string>
    <string name="label_last_export_time">Last Exported:</string>
    <string name="menu_title_enable_sync">Enable Sync</string>
...
    <string name="label_recommend_app">Recommend in Play Store</string>
    <string name="menu_show_compact_view">Compact View</string>
    <string name="book_default_name">Book %1$d</string>
    <string name="last_export_time_never">never</string>
    <string name="title_rename_book">Rename Book</string>
...
