...
            android:text="@string/app_name"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="?android:textColorPrimary" />
    </LinearLayout>

    <Spinner
        android:id="@+id/book_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dialog_padding"
        android:minHeight="?android:attr/listPreferredItemHeight" />
</LinearLayout>
