...
            android:textSize="18sp"
            tools:text="$450.000.000"
            android:layout_gravity="bottom"
            android:layout_marginRight="@dimen/dialog_padding" />

        <ImageView
            android:id="@+id/options_menu"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:paddingTop="20dp"
            android:paddingLeft="24dp"
            android:scaleType="centerInside"
...
